--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   "dependencies": {
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.52.2",
+    "@sanity/icons": "^3.4.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.62.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
     "feed": "^4.2.2",
     "framer-motion": "^11.2.10",
     "next": "14.2.11",
-    "next-sanity": "^9.4.7",
+    "next-sanity": "^9.8.8",
     "react": "^18",
     "react-dom": "^18",
     "react-use-measure": "^2.1.1",
-    "sanity": "^3.55.0"
+    "sanity": "^3.62.3",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
